istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: router
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - name: frontend
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 8080






#  http:
#    - name: categories
#      match:
#        - uri:
#            prefix: /categories
#      route:
#        - destination:
#            host: category-service
#            port:
#              number: 8080
#    - name: products
#      match:
#        - uri:
#            prefix: /products
#      route:
#        - destination:
#            host: product-service
#            port:
#              number: 8080
